--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="nav-link text-white-50" href="#">Conviertete en orador</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-success" href="#">Comprar tickets</a>
+        <a class="nav-link text-success" href="./index2.html" target="_blank">Comprar tickets</a>
       </li>
     </ul>
   </div>
@@ -59,7 +59,7 @@
                   evento, a otros estudiantes de Codo a Codo y los oradores de primer
                   nivel, que tenemos para ti. Te esperamos!.</p>
                 <button class="boton1" type="button">Quiero ser orador</button>
-                <button class="boton2" type="button">Comprar tickets</button>
+                <button class="boton2" type="button"><a id="boton2" href="./index2.html">Comprar tickets</a></button>
               </div>
             </div>
             <div class="carousel-item">
@@ -73,7 +73,7 @@
                   evento, a otros estudiantes de Codo a Codo y los oradores de primer
                   nivel, que tenemos para ti. Te esperamos!.</p>
                 <button class="boton1" type="button">Quiero ser orador</button>
-                <button class="boton2" type="button">Comprar tickets</button>
+                <button class="boton2" type="button"><a id="boton2" href="./index2.html">Comprar tickets</a></button>
               </div>
             </div>
             <div class="carousel-item">
@@ -87,7 +87,7 @@
                   evento, a otros estudiantes de Codo a Codo y los oradores de primer
                   nivel, que tenemos para ti. Te esperamos!.</p>
                 <button class="boton1" type="button">Quiero ser orador</button>
-                <button class="boton2" type="button">Comprar tickets</button>
+                <button class="boton2" type="button"><a id="boton2" href="./index2.html">Comprar tickets</a></button>
               </div>
             </div>
           </div>
